# nhl-excite-o-meter-be

./: .gitignore  Dockerfile  README.md  db.py  deploy.json  docker-compose.yaml  local.env  main.py  preview.py  preview_excitement_score.py  pyproject.toml  requirements.txt  runLocal.sh  testing.py
.github/workflows/: build.yml  deploy.yml  docker-build.yml
backend/: db.py  logging_config.py  main.py  preview.py
iac/: README.md
iac/app/: main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
iac/network/: main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
src/nhl_excite_o_meter/: __init__.py  __main__.py  db.py  main.py  preview.py  preview_excitement_score.py  teamrates.py
src/nhl_excite_o_meter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_excitement_preview.py
